--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ background-color: #6C7A89;
 
 
 .container{
+    text-align: center;
     width: 90%;
     margin: 30px;
 }
@@ -56,7 +57,7 @@ nav{
 }
 
 nav li{
-    float: left;
+    display: inline-block;
     list-style-type: none;
 
 }
