--- a/style.css
+++ b/style.css
@@ -75,3 +75,11 @@ nav a:hover{
     background: #6C7A89;
     color: #F2F1EF;
 }
+
+#chame{
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    
+
+}
