--- a/style-eye.css
+++ b/style-eye.css
@@ -4,8 +4,24 @@ margin: 0;
     
 }
 
+
 body{
 width: 100%;
 background-color: #6C7A89;
 color: #F2F1EF;
 }
+
+
+h1{
+    font-size: 50px;
+    text-align: center;
+    font-family: serif;
+}
+
+p{
+    font-size: 10px;
+    text-align: center;
+    font-family: 'Hiragino Kaku Gothic ProN';
+}
+
+
