--- a/style.css
+++ b/style.css
@@ -7,43 +7,50 @@ margin: 0;
 body{
 width: 100%;
 background-color: #6C7A89;
-
+font-family:'Lucida Grande','Hiragino Kaku Gothic ProN',
+  sans-serif;
 }
 
 #wrap{
-    width: 500px;
+    width: 600px;
     margin: auto;
+    text-align: center;
 }
 
 
 .container{
     text-align: center;
-    width: 90%;
-    margin: 30px;
-}
-
-
+    width: 100%;
+    margin: 20px;
 }
 
 
 #key-block img{
-    float: left;
+    
     margin-right: 10px;
 }
 
+
 #key-block h1{
     text-align: center;
-    font-size: 18px;
-    width: 450px;
-    margin-bottom: 30px;
+    font-size: 30px;
+    margin-bottom: 11px;
+    color: aliceblue;
+    font-family: 'Helvetica Neue UltraLight;
+}
+
+
+#key-block h5{
+    text-align: center;
+    font-size: 12px;
+    margin-bottom: 10px;
     color: aliceblue;
 
 }
 
 #key-block p{
     text-align: center;
-    font-size: 12px;
-    width: 450px;
+    font-size: 10px;
     margin-bottom: 5px;
     color: aliceblue;
 
@@ -78,15 +85,24 @@ nav a:hover{
     color: #F2F1EF;
 }
 
-#chame{
+#box1{
+    width: 260px;
+    margin: auto;
     text-align: center;
+
+}
+
+#chame{
+    float: left;
     text-decoration: none;
     border: none;
     list-style-type: none;
+    margin-right: 30px
 }
 
 #eye{
-    text-align: center;
+    float: left;
     list-style-type: none;
+    margin-left: 30px; 
 
 }
