--- a/style-chame.css
+++ b/style-chame.css
@@ -8,6 +8,8 @@ body{
 width: 100%;
 background-color: #6C7A89;
 color: #F2F1EF;
+    font-family:'Lucida Grande','Hiragino Kaku Gothic ProN',
+  sans-serif;
 }
 
 h1{
